basic css and html

--- a/index.html
+++ b/index.html
@@ -15,12 +15,18 @@
     <title>Portfolio</title>
 </head>
 <body>
+    <div class="hero-me">
+    <p>Hello, I am</p>
  <h1>
-    Hello World
+    Lovelyn Ujunwa
 </h1>
-    <p>
-    Hi,There.
-    </p>
+    <h2 class="mb-5">
+    Front-end developer, based in Nigeria.
+    </h2>
+    <div>
+    <a href="#" class="btn btn-primary">Contact me</a>
+</div>
+</div>
     
 </body>
 </html>
