--- a/index.html
+++ b/index.html
@@ -27,6 +27,54 @@
     <a href="#" class="btn btn-primary">Contact me</a>
 </div>
 </div>
-    
+<p class="text-center m-5">
+    Features some projects by me.
+    </p>
+<div class="container">
+    <div class="row mb-8">
+        <div class="col d-none d-lg-block">
+          <img src="images/yogurt.jpg" class="img-fluid" alt="">  
+        </div>
+        <div class="col">
+     <div class="yogurt-description">      
+    <h2 class="mb-5">Yogurt project</h2>
+    <p class=" mb-5 text-muted">
+        Yogurt is a popular fermented milk product containing both Lactobacillus bulgaricus and Streptococcus thermophilus cultures. Most yogurts contain several nutrients that are lacking in the American diet, such as calcium, vitamin D, and potassium.
+    </p>
+    <a href="http://" class="btn btn-branding"> Learn More</a>
+</div>
+</div> 
+</div>
+
+<div class="row mb-8">
+    <div class="col">
+ <div class="yogurt-description">      
+<h2 class="mb-5">Weather App</h2>
+<p class=" mb-5 text-muted">
+    Yogurt is a popular fermented milk product containing both Lactobacillus bulgaricus and Streptococcus thermophilus cultures. Most yogurts contain several nutrients that are lacking in the American diet, such as calcium, vitamin D, and potassium.
+</p>
+<a href="http://" class="btn btn-branding"> Learn More</a>
+</div>
+</div>
+<div class="col d-none d-lg-block">
+    <img src="images/weather.jpg" class="img-fluid" alt="">  
+  </div>
+</div>
+
+<div class="row mb-8">
+    <div class="col d-none d-lg-block">
+      <img src="images/dictionary.jpg" class="img-fluid" alt="">  
+    </div>
+    <div class="col">
+ <div class="yogurt-description">      
+<h2 class="mb-5">Dictionary App</h2>
+<p class=" mb-5 text-muted">
+    Yogurt is a popular fermented milk product containing both Lactobacillus bulgaricus and Streptococcus thermophilus cultures. Most yogurts contain several nutrients that are lacking in the American diet, such as calcium, vitamin D, and potassium.
+</p>
+<a href="http://" class="btn btn-branding"> Learn More</a>
+</div>
+</div> 
+</div>
+</div>
 </body>
 </html>
