--- a/index.html
+++ b/index.html
@@ -15,6 +15,26 @@
     <title>Portfolio</title>
 </head>
 <body>
+    <div class="container">
+    <nav class="d-flex justify-content-between">
+    <div class="nav-title"><a href="/">Luhvelynn</a>
+   </div> 
+        <ul>
+            <li class="active"> 
+                <a href="/"> Home</a>
+            </li>
+            <li>
+                <a href="about.html"> About</a>
+            </li>
+            <li>
+                <a href="work.html"> Work</a>
+            </li>
+            <li>
+                <a href="contact.html"> Contact</a>
+            </li>
+        </ul>
+    </nav>
+</div> 
     <div class="hero-me">
     <p>Hello, I am</p>
  <h1>
