updated the footer

--- a/contact.html
+++ b/contact.html
@@ -16,6 +16,27 @@
     <title>Portfolio</title>
 </head>
 <body>
+    <div class="container">
+        <nav class="d-flex justify-content-between">
+        <div class="nav-title"><a href="/" title="Contact-page">Luhvelynn</a>
+       </div> 
+            <ul>
+                <li> 
+                    <a href="/" title="Homepage"> Home</a>
+                </li>
+                <li>
+                    <a href="about.html" title="About Lovelyn"> About</a>
+                </li>
+                <li>
+                    <a href="work.html" title="Lovelyn's works"> Work</a>
+                </li>
+                <li class="active">
+                    <a href="contact.html" title="Contact Lovelyn"> Contact</a>
+                </li>
+            </ul>
+        </nav>
+    </div> 
+  
     <div class="content-container">
             <div class="content">
     <h1 class="mb-5">Let's get in touch. Contact Me.</h1>
@@ -29,6 +50,17 @@
     <p>
         <a href="https://www.instagram.com/luhvelynn" target="_blank">@Luhvelynn</a></p>
 </div>
+<footer>
+<div> 
+    <p class="text-center mt-5">
+        This project was coded by Lovelyn, and is
+         <a href="https://github.com/Luhvelyn/portfolio-project"
+         target="_blank">
+         open sourced
+        </a>
+    </p>
+</div>
+</footer>
 </div>
 </body>
 </html>
