--- a/work.html
+++ b/work.html
@@ -16,12 +16,30 @@
     <title>Portfolio</title>
 </head>
 <body>
+    <div class="container">
+        <nav class="d-flex justify-content-between">
+        <div class="nav-title"><a href="/" title="Work-page">Luhvelynn</a>
+       </div> 
+            <ul>
+                <li> 
+                    <a href="/" title="Homepage"> Home</a>
+                </li>
+                <li>
+                    <a href="about.html" title="About Lovelyn"> About</a>
+                </li>
+                <li class="active">
+                    <a href="work.html" title="Lovelyn's works"> Work</a>
+                </li>
+                <li>
+                    <a href="contact.html" title="Contact Lovelyn"> Contact</a>
+                </li>
+            </ul>
+        </nav>
+    </div> 
+  
     <div class="content-container">
             <div class="content">
     <h1 class="mb-5">take a look at what I've been working on!</h1>
-</div>
-</div>
-
 <div class="row">
     <div class="col-md-6 mb-4">
         <img src="images/Yogurt.jpg" class="img-fluid mb-3 rounded" alt="">
@@ -46,6 +64,63 @@
         <h3 class="text-center m-0">Translator App</h3>
         <p class="text-center">Built with HTML, React and CSS</p>
     </div>
+    <footer>
+        <div class="contact-box d-flex justify-content-between mb-5 d-none d-md-flex">
+            <div>
+                <h4>Work Inquiry.</h4>
+            <p class="text-muted">
+                Let's work together
+            </p>
+        </div>
+            <div>
+                <a href="/contact.html" 
+                class="btn btn-branding" 
+                title="Contact Lovelyn">Contact me</a>
+        </div>
+    </div>
+        <div 
+        class="d-flex justify-content-center mb-3 mt-5"><a href="mailto:lovelynjasmine1@gmail.com"
+        class="email-link"
+        title="eEmail Lovelyn"> 
+            lovelynjasmine1@gmail.com</a>
+        </div>
+    
+        
+            <div class="social-links d-flex justify-content-center">
+            <a href="https://instagram.com/luhvelynn" 
+            target="_blank"
+            title="Instagram profile">
+                <i class="fa-brands fa-instagram"></i>
+            </a>
+            <a href="https://github.com/luhvelynn"
+             target="_blank"
+             title="Github profile">      
+        <i class="fa-brands fa-github"></i>
+            </a>
+            <a href="https://www.facebook.com/obi.lovelyn" 
+            target="_blank"
+            title="Facebook profile">
+                <i class="fa-brands fa-facebook"></i>
+            </a>
+            <a href="https://x.com/luhvelynn"
+            target="_blank"
+            title="Teitter profile">
+                <i class="fa-brands fa-square-x-twitter" target="_blank"></i>
+            </a>
+        </div>
+    </div>
+    <div> 
+        <p class="text-center mt-5">
+            This project was coded by Lovelyn, and is
+             <a href="https://github.com/Luhvelyn/portfolio-project"
+             target="_blank">
+             open sourced
+            </a>
+        </p>
+    </div>
+    </footer>
+    </div>
+</div>
 </div>
 </body>
 </html>
