did a little touch up.

--- a/about.html
+++ b/about.html
@@ -49,7 +49,7 @@
     <p class="mb-4">
         For people who want to statrt their coding journey, this is avery interesting workshop. You'll have many challenging exercises, and well detailed explanations, assessment, and deadlines to keep you focused.    
     </p>
-    <a href="" class="btn btn-branding">Veiw my projects</a>
+    <a href="/work.html" class="btn btn-branding">Veiw my projects</a>
 </div>
 </div>
 <div class="col-lg-6">
