--- a/work.html
+++ b/work.html
@@ -85,7 +85,7 @@
             lovelynjasmine1@gmail.com</a>
         </div>
     
-        
+        <div class="container">
             <div class="social-links d-flex justify-content-center">
             <a href="https://instagram.com/luhvelynn" 
             target="_blank"
@@ -108,6 +108,7 @@
                 <i class="fa-brands fa-square-x-twitter" target="_blank"></i>
             </a>
         </div>
+    </div>
     </div>
     <div> 
         <p class="text-center mt-5">
