--- a/about.html
+++ b/about.html
@@ -47,7 +47,7 @@
         Front-end developer, based in Nigeria.
     </h2>
     <p class="mb-4">
-        For people who want to statrt their coding journey, this is avery interesting workshop. You'll have many challenging exercises, and well detailed explanations, assessment, and deadlines to keep you focused.    
+       my name is Lovelyn ujunwa. A front-end developer based in nigeria.I specialize in creating responsive, dynamic websites that prioritize mobile devices. knowledgeable about Search Engine Optimization and adept in HTML, CSS, React and JavaScript. Excellent ability to work with design teams to produce user interfaces that are precise.    
     </p>
     <a href="/work.html" class="btn btn-branding">Veiw my projects</a>
 </div>
