Precise description for our exhibited projects

--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
  <div class="yogurt-description">      
 <h2 class="mb-5">Weather App</h2>
 <p class=" mb-5 text-muted">
-    Yogurt is a popular fermented milk product containing both Lactobacillus bulgaricus and Streptococcus thermophilus cultures. Most yogurts contain several nutrients that are lacking in the American diet, such as calcium, vitamin D, and potassium.
+    Weather App is the application of science and technology to predict the accurate conditions of the atmosphere for a given location and time.
 </p>
 <a href="/work.html" class="btn btn-branding"> Learn More</a>
 </div>
@@ -91,7 +91,7 @@
  <div class="yogurt-description">      
 <h2 class="mb-5">Dictionary App</h2>
 <p class=" mb-5 text-muted">
-    Yogurt is a popular fermented milk product containing both Lactobacillus bulgaricus and Streptococcus thermophilus cultures. Most yogurts contain several nutrients that are lacking in the American diet, such as calcium, vitamin D, and potassium.
+    Our Dictionary can be used to look up the meaning, spelling, usage, origin, or synonyms of any word in most languages.
 </p>
 <a href="/work.html" class="btn btn-branding"> Learn More</a>
 </div>
